--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-#portfolio { width:100%; margin:20px 0px; }
+#portfolio { width:100%; margin:20px 0px; display: table;}
+.guide { float:left; width: 200px;}
 .tile { float:left; height: 250px;  border:6px #fff solid;}
-.tile:hover { opacity: 0.85; }
+.tile:hover { opacity: 0.90; }
 .thumbnail {  padding: 3px; height: 187px; width: auto; overflow: hidden;   border-radius: 5px;}
 .thumbnailTitle {font-family: 'Baloo Bhaina', bold; font-size: 16px;color: #1a1a1a; text-align:left; height: 63px; width: auto; word-wrap: break-word; padding-left: 8px;}
 .thumbnailSubText {font-family: 'Open Sans', sans-serif; font-size: 10px; color: #1a1a1a; text-align:left; }
@@ -10,3 +11,7 @@
 .web { background: #ddd; }
 p{ padding:10px; border-bottom: 1px #ccc dotted; text-decoration: none; font-family: Arial; text-transform:uppercase; font-size: 12px; color: #333; display:block; float:left;}
 p:hover { cursor:pointer; background: #333; color:#eee; }
+
+H1{ padding-left:5px; text-decoration: none; font-family: Arial; font-size: 36px; color: #dc143c; display:block;}
+
+H4{ padding-left:5px;text-decoration: none; font-family: Arial; font-size: 14px; color: #dc143c; display:block;}
