--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-#portfolio { width:100%; margin:20px 0px; display: table;}
-.guide { float:left; width: 200px;}
+.container { position:relative; padding:0 0 0 55px; }
+.sidebar { position:absolute; top:0; bottom:0; left:0; width:130px;}
+H1{ font-family: 'Open Sans'; font-size: 30px; color: #663366; }
+.sidebarImage { padding-left:15px; width: 140px }
+.sidebarLinks { font-family: 'Open Sans', sans-serif; font-size: 12px; }
+
+#portfolio { width:100%; margin:20px 0px; padding-left: 120px;}
 .tile { float:left; height: 250px;  border:6px #fff solid;}
 .tile:hover { opacity: 0.90; }
 .thumbnail {  padding: 3px; height: 187px; width: auto; overflow: hidden;   border-radius: 5px;}
@@ -9,9 +14,5 @@
 .professional { background:#E8E8E8; }
 .personal { background: #eaf0fa;}
 .web { background: #ddd; }
-p{ padding:10px; border-bottom: 1px #ccc dotted; text-decoration: none; font-family: Arial; text-transform:uppercase; font-size: 12px; color: #333; display:block; float:left;}
-p:hover { cursor:pointer; background: #333; color:#eee; }
-
-H1{ padding-left:5px; text-decoration: none; font-family: Arial; font-size: 36px; color: #dc143c; display:block;}
-
-H4{ padding-left:5px;text-decoration: none; font-family: Arial; font-size: 14px; color: #dc143c; display:block;}
+p{ padding:10px; border-bottom: 1px #ccc dotted; text-decoration: none; font-family: 'Open Sans'; text-transform:uppercase; font-size: 12px; color: #333; display:block; float:left;}
+p:hover { cursor:pointer; background: #663366; color:#eee; }
