Added eBike + fixed Firefox font issue
The Open Sans in the project descriptions was displaying bold in firefox
- fixed by setting font weight to normal. Added eBike tile + pneumatics
diagram for ATC project.

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ display: inline;
   padding-left: 22px;
   padding-bottom: 8px;
   font-family: 'Open Sans';
+  font-weight: normal;
   width: 680px;
 }
 
